--- a/templets/importScanningFIle.html
+++ b/templets/importScanningFIle.html
@@ -223,7 +223,7 @@
 
             <!-- Scrollable Table -->
             <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
-              <form method="get" action="/scan/">
+              <form method="get" action="">
                 {% csrf_token %}
                 <table class="table table-bordered table-striped table-hover align-middle text-center" id="table1">
                   <thead class="table-dark sticky-top">
@@ -303,7 +303,7 @@
 
             <!-- Scrollable Table -->
             <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
-              <form method="get" action="/scan/">
+              <form method="get" action="">
                 {% csrf_token %}
                 <table class="table table-bordered table-striped table-hover align-middle text-center" id="table1">
                   <thead class="table-dark sticky-top">
