--- a/templets/masterImport.html
+++ b/templets/masterImport.html
@@ -93,6 +93,54 @@
       margin-bottom: 6px;
       font-size: 0.9rem;
     }
+     /* Sidebar adjustments */
+        @media (max-width: 768px) {
+            .sidebar {
+                position: fixed;
+                top: 0;
+                left: -250px;
+                height: 100%;
+                transition: left 0.3s ease;
+            }
+
+            .sidebar.active {
+                left: 0;
+            }
+
+            .main-content {
+                margin-left: 0;
+            }
+        }
+
+        /* Hide sidebar and shift content for small screens */
+        @media (max-width: 768px) {
+            .sidebar {
+                left: -250px;
+            }
+
+            .sidebar.active {
+                left: 0;
+            }
+
+            .main-content {
+                margin-left: 0;
+            }
+
+            .overlay {
+                display: none;
+                position: fixed;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(0, 0, 0, 0.5);
+                top: 0;
+                left: 0;
+                z-index: 1040;
+            }
+
+            .overlay.active {
+                display: block;
+            }
+        }
   </style>
 </head>
 
@@ -112,13 +160,13 @@
     <h5>Welcome {{request.user}}</h5>
     <hr style="border-color: rgba(255, 255, 255, 0.2)">
     <a href="/">🏠 Home</a>
-    <a href="/master" onclick="Master_File()">📁 Master-File</a>
+    <a href="/master">📁 Master-File</a>
     <a href="/upload/">📦 Stock-File</a>
-    <a href="/dataEnter">📷 Scanning-File</a>
+    <a href="/stockdata">📦 Stock-Record</a>
+    <a href="/masterdata">📈 Master-Record</a>
+    <a href="/scanner">📷 Scanning-File</a>
+    <a href="/scand">📷Download-Scanning-File</a>
     <a href="/ss">🔄 Difference (Stock & Scan)</a>
-    <a href="/short">📉 Short-File</a>
-    <a href="/excess">📈 Excess-File</a>
-    <a href="">🧾 SIExcess-File</a>
     <a href="/logout">🔓 Logout</a>
   </div>
 
@@ -140,14 +188,60 @@
           <button class="btn btn-primary" type="submit" onclick="MSEX()">Import</button>
         </form>
       </div><br>
+        <!-- Delete Card -->
+      <div class="card shadow-lg border-0 rounded-4">
+        <div class="card-body">
+          <h4 class="card-title text-center text-danger mb-3">🗑 Delete Record</h4>
+
+          <form method="get" action="/master">
+            {% csrf_token %}
+
+            <!-- Delete Record  -->
+            <div class="mb-3">
+                <label for="status" class="form-label">Choose Status:</label>
+                <select id="status" name="status" class="form-select">
+                  <option value="">Please Choose Option</option>
+                  <option value="Master">Master File Data</option>
+
+                </select>
+              </div>
+
+
+            <!-- Submit Button -->
+            <button type="submit" class="btn btn-danger w-100">
+              Delete Record
+            </button>
+          </form>
+        </div>
+      </div>
+
+{% if messages %}
+<div class="container mt-2">
+{% for message in messages %}
+<div class="alert
+{% if message.tags == 'success' %} alert-success
+{% elif message.tags == 'error' %} alert-danger
+{% else %} alert-info {% endif %}
+alert-dismissible fade show" role="alert">
+
+{{ message }}
+<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+{% endfor %}
+</div>
+{% endif %}
+</div>
+</div>
 
     </div>
   </div>
 
 
-  </div>
+    </div>
+  </div><br>
 
- 
+
+
 
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -177,7 +271,7 @@
     overlay.addEventListener("click", () => {
       sidebar.classList.remove("active");
       overlay.classList.remove("active");
-    }); 
+    });
   </script>
 
 </body>
