--- a/templets/excess.html
+++ b/templets/excess.html
@@ -44,35 +44,54 @@
       transition: all 0.3s;
     }
 
-    /* Hide sidebar and shift content for small screens */
-    @media (max-width: 768px) {
-      .sidebar {
-        left: -250px;
-      }
+   /* Sidebar adjustments */
+        @media (max-width: 768px) {
+            .sidebar {
+                position: fixed;
+                top: 0;
+                left: -250px;
+                height: 100%;
+                transition: left 0.3s ease;
+            }
 
-      .sidebar.active {
-        left: 0;
-      }
+            .sidebar.active {
+                left: 0;
+            }
 
-      .main-content {
-        margin-left: 0;
-      }
+            .main-content {
+                margin-left: 0;
+            }
+        }
 
-      .overlay {
-        display: none;
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        top: 0;
-        left: 0;
-        z-index: 1040;
-      }
+        /* Hide sidebar and shift content for small screens */
+        @media (max-width: 768px) {
+            .sidebar {
+                left: -250px;
+            }
 
-      .overlay.active {
-        display: block;
-      }
-    }
+            .sidebar.active {
+                left: 0;
+            }
+
+            .main-content {
+                margin-left: 0;
+            }
+
+            .overlay {
+                display: none;
+                position: fixed;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(0, 0, 0, 0.5);
+                top: 0;
+                left: 0;
+                z-index: 1040;
+            }
+
+            .overlay.active {
+                display: block;
+            }
+        }
   </style>
 </head>
 
@@ -87,18 +106,18 @@
   </nav>
 
   <!-- Sidebar -->
-  <div class="sidebar" id="sidebar">
+<div class="sidebar" id="sidebar">
     <h4 class="text-start">Audit-Manager</h4>
     <h5>Welcome {{request.user}}</h5>
     <hr style="border-color: rgba(255, 255, 255, 0.2)">
     <a href="/">🏠 Home</a>
     <a href="/master">📁 Master-File</a>
     <a href="/upload/">📦 Stock-File</a>
+    <a href="/stockdata">📦 Stock-Record</a>
+    <a href="/masterdata">📈 Master-Record</a>
     <a href="/scanner">📷 Scanning-File</a>
+    <a href="/scand">📷Download-Scanning-File</a>
     <a href="/ss">🔄 Difference (Stock & Scan)</a>
-    <a href="/short">📉 Short-File</a>
-    <a href="/excess">📈 Excess-File</a>
-    <a href="">🧾 SIExcess-File</a>
     <a href="/logout">🔓 Logout</a>
   </div>
 
@@ -106,60 +125,46 @@
   <div class="overlay" id="overlay"></div>
 
   <!-- Main content -->
+  <div class="main-content">
 
   <!-- Content -->
-  <div class="main-content">
-    <h2 class="mb-4 text-center">📊 Stock vs Scanning Excess Records</h2> 
-<!-- Table Section -->
-<div class="container-fluid py-3">
-  <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
-    <table class="table table-bordered table-striped table-hover align-middle">
-      <thead class="table-dark text-center sticky-top">
-        <tr>
-          <th>Addl</th>
-          <th>Barcode</th>
-          <th>Item Name</th>
-          <th>Size</th>
-          <th>Section</th>
-          <th>MRP</th>
-          <th>Stock Count</th>
-          <th>Location Count</th>
-          <th>Difference</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for row in result %}
-        <tr>
-          <td>{{ row.EANCODE }}</td>
-          <td>{{ row.BARCODE }}</td>
-          <td>{{ row.ARTICLENO }}</td>
-          <td>{{ row.SIZE }}</td>
-          <td>{{ row.SECTION }}</td>
-          <td>{{ row.MRP }}</td>
-          <td class="text-center">{{ row.home_stockdata }}</td>
-          <td class="text-center">{{ row.home_loctionrecords }}</td>
-          <td class="text-center">
-            {% if row.difference > 0 %}
-              <span class="text-success fw-bold">{{ row.difference }}</span>
-            {% elif row.difference < 0 %}
-              <span class="text-danger fw-bold">{{ row.difference }}</span>
-            {% else %}
-              <span class="text-secondary">0</span>
-            {% endif %}
-          </td>
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-  </div>
-</div><br>
-    <div class="container mb-3">
-      <form action="" method="post">
-        {% csrf_token %}
-        <input type="download" name="download" value="download" style="display: none;">
-        <button class="btn btn-success" onclick="downloadTable()">📥 Download Table</button>
-      </form>
-    </div>
+        <h2 class="mb-4 text-center">📊 Mater Files</h2>
+      <!-- Table Section -->
+      <div class="container-fluid py-3">
+        <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
+          <table class="table table-bordered table-striped table-hover align-middle">
+            <thead class="table-dark text-center sticky-top">
+              <tr>
+                  <th>ID</th>
+                  <th>Date</th>
+                <th>Master File</th>
+                <!--<th>Article No</th>-->
+                <!--<th>Size</th>-->
+                <!--<th>Section</th>-->
+                <!--<th>MRP</th>-->
+
+              </tr>
+            </thead>
+            <tbody>
+              {% for row in result %}
+              <tr>
+                  <td>{{ row.id }}</td>
+                  <td>{{ row.date }}</td>
+                  <td>{{ row.file }}</td>
+              <!--  <td><button type="submit" class="btn btn-primary w-100" onclick="ls()">Delete File</button></td>-->
+                <!--<td>{{ row.ARTICLENO }}</td>-->
+                <!--<td>{{ row.SIZE }}</td>-->
+                <!--<td>{{ row.SECTION }}</td>-->
+                <!--<td>{{ row.MRP }}</td>-->
+
+              </tr>
+              {% endfor %}
+
+
+            </tbody>
+          </table>
+        </div>
+      </div>
 
   </div>
 
@@ -176,7 +181,7 @@
     overlay.addEventListener("click", () => {
       sidebar.classList.remove("active");
       overlay.classList.remove("active");
-    }); 
+    });
 
             function ls() {
             let status = document.getElementById("status").value;
